# asaaspy

./: .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: deploy.yml  python-package.yml
docs/: index.md  requirements.txt
docs/para_desenvolvedores/: arquitetura.md  contribuindo.md  pague-me_um_cafezinho.md
docs/utilizando/: quickstart.md
src/asaaspy/: __init__.py  client.py  constants.py  exceptions.py  log.py  service.py  singleton.py
src/asaaspy/client/: base.py  customer.py
src/asaaspy/client/resources/: bank.py  customer.py  my_account.py  payment.py  pix.py  subaccounts.py  transfer.py
src/asaaspy/schemas/: bank.py  base.py  base_fields.py  customer.py  fields.py  payment.py
src/asaaspy/schemas/v3/: bank.py  customer.py  my_account.py  payment.py  pix.py  subaccount.py  transfer.py
tests/: asaas_sandbox_vcr.json  asaas_sandbox_vcr.yml  asaas_sandbox_vcr_subaccount.yml  conftest.py  test_asaas_base_client.py
tests/bank/: test_bank_resource.py
tests/customer/: test_asaas_customer.py  test_customer_resource.py
tests/factories/: customer.py
tests/my_account/: test_my_account.py
tests/payment/: test_payment.py  test_payment_resource.py
tests/pix/: test_pix_resource.py
tests/subaccount/: test_subaccount_resource.py
tests/transfer/: test_transfer_resource.py
